--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
       body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
       #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
+      #nickname { border: none; padding: 0 1rem; border-radius: 2rem; margin: 0.25rem; flex-grow: 1; }
+      #room { border: none; padding: 0 1rem; border-radius: 2rem; margin: 0.25rem; }
+      #input { border: none; padding: 0 1rem; flex-grow: 2; border-radius: 2rem; margin: 0.25rem; }
+      #input:focus, #nickname:focus { outline: none; }
       #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
 
       #messages { list-style-type: none; margin: 0; padding: 0; }
@@ -19,7 +21,13 @@
 <body>
   <ul id="messages"></ul>
   <form id="form" action="">
-    <input id="input" autocomplete="off" /><button>Send</button>
+    <input id="nickname" placeholder="Enter your nickname" autocomplete="off" required />
+    <select id="room">
+      <option value="Room1">Room 1</option>
+      <option value="Room2">Room 2</option>
+      <option value="Room3">Room 3</option>
+    </select>
+    <input id="input" autocomplete="off" placeholder="Type your message" required /><button>Send</button>
   </form>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -34,14 +42,17 @@
     });
 
     const form = document.getElementById('form');
+    const nickname = document.getElementById('nickname');
+    const room = document.getElementById('room');
     const input = document.getElementById('input');
     const messages = document.getElementById('messages');
 
     form.addEventListener('submit', (e) => {
       e.preventDefault();
-      if (input.value) {
+      if (nickname.value && input.value && room.value) {
         const clientOffset = `${socket.id}-${counter++}`;
-        socket.emit('chat message', input.value, clientOffset);
+        const message = `${nickname.value}: ${input.value}`;
+        socket.emit('chat message', { room: room.value, message }, clientOffset);
         input.value = '';
       }
     });
@@ -52,6 +63,28 @@
       messages.appendChild(item);
       window.scrollTo(0, document.body.scrollHeight);
       socket.auth.serverOffset = serverOffset;
+    });
+
+    socket.emit('join room', room.value);
+
+    room.addEventListener('change', () => {
+      socket.emit('leave room', room.value);
+      messages.innerHTML = ''; // Clear chat history when room changes
+      socket.emit('join room', room.value);
+    });
+
+    socket.on('room messages', (msgs) => {
+      messages.innerHTML = ''; // Clear previous messages
+      msgs.forEach(msg => {
+        const item = document.createElement('li');
+        item.textContent = msg;
+        messages.appendChild(item);
+      });
+      window.scrollTo(0, document.body.scrollHeight);
+    });
+
+    socket.on('connect', () => {
+      socket.emit('join room', room.value);
     });
   </script>
 </body>
