--- a/index.html
+++ b/index.html
@@ -4,34 +4,49 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Socket.IO chat</title>
   <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-
+      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f4f4f9; }
+      
+      #login-screen { display: flex; flex-direction: column; align-items: center; justify-content: center; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(255, 255, 255, 0.9); }
+      #login-screen input { border: 1px solid #ccc; padding: 0.75rem; border-radius: 1rem; width: 60%; text-align: center; margin-bottom: 1rem; }
+      #login-screen button { background: #333; border: none; padding: 0.75rem 2rem; color: #fff; border-radius: 1rem; cursor: pointer; }
+      
+      #chat { display: none; }
       #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #nickname { border: none; padding: 0 1rem; border-radius: 2rem; margin: 0.25rem; flex-grow: 1; }
       #room { border: none; padding: 0 1rem; border-radius: 2rem; margin: 0.25rem; }
       #input { border: none; padding: 0 1rem; flex-grow: 2; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus, #nickname:focus { outline: none; }
+      #input:focus, #room:focus { outline: none; }
       #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
 
-      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages { list-style-type: none; margin: 0; padding: 0; height: calc(100vh - 3rem); overflow-y: auto; }
       #messages > li { padding: 0.5rem 1rem; }
       #messages > li:nth-child(odd) { background: #efefef; }
   </style>
 </head>
 <body>
-  <ul id="messages"></ul>
-  <form id="form" action="">
-    <input id="nickname" placeholder="Enter your nickname" autocomplete="off" required />
-    <select id="room">
-      <option value="Room1">Room 1</option>
-      <option value="Room2">Room 2</option>
-      <option value="Room3">Room 3</option>
-    </select>
-    <input id="input" autocomplete="off" placeholder="Type your message" required /><button>Send</button>
-  </form>
+
+  <div id="login-screen">
+    <h2>Enter your nickname</h2>
+    <input id="nickname-input" placeholder="Nickname" autocomplete="off" required />
+    <button id="enter-chat">Enter Chat</button>
+  </div>
+
+  <div id="chat">
+    <ul id="messages"></ul>
+    <form id="form" action="">
+      <select id="room">
+        <option value="Room1">Room 1</option>
+        <option value="Room2">Room 2</option>
+        <option value="Room3">Room 3</option>
+      </select>
+      <input id="input" autocomplete="off" placeholder="Type your message" required />
+      <button>Send</button>
+    </form>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script>
     let counter = 0;
+    let nickname = '';
 
     const socket = io({
       auth: {
@@ -41,17 +56,29 @@
       retries: 3,
     });
 
+    const loginScreen = document.getElementById('login-screen');
+    const chatScreen = document.getElementById('chat');
+    const enterChatButton = document.getElementById('enter-chat');
+    const nicknameInput = document.getElementById('nickname-input');
     const form = document.getElementById('form');
-    const nickname = document.getElementById('nickname');
     const room = document.getElementById('room');
     const input = document.getElementById('input');
     const messages = document.getElementById('messages');
 
+    enterChatButton.addEventListener('click', () => {
+      nickname = nicknameInput.value.trim();
+      if (nickname) {
+        loginScreen.style.display = 'none';
+        chatScreen.style.display = 'block';
+        socket.emit('join room', room.value);
+      }
+    });
+
     form.addEventListener('submit', (e) => {
       e.preventDefault();
-      if (nickname.value && input.value && room.value) {
+      if (nickname && input.value && room.value) {
         const clientOffset = `${socket.id}-${counter++}`;
-        const message = `${nickname.value}: ${input.value}`;
+        const message = `${nickname}: ${input.value}`;
         socket.emit('chat message', { room: room.value, message }, clientOffset);
         input.value = '';
       }
@@ -65,16 +92,14 @@
       socket.auth.serverOffset = serverOffset;
     });
 
-    socket.emit('join room', room.value);
-
     room.addEventListener('change', () => {
       socket.emit('leave room', room.value);
-      messages.innerHTML = ''; // Clear chat history when room changes
+      messages.innerHTML = '';
       socket.emit('join room', room.value);
     });
 
     socket.on('room messages', (msgs) => {
-      messages.innerHTML = ''; // Clear previous messages
+      messages.innerHTML = '';
       msgs.forEach(msg => {
         const item = document.createElement('li');
         item.textContent = msg;
@@ -84,7 +109,9 @@
     });
 
     socket.on('connect', () => {
-      socket.emit('join room', room.value);
+      if (nickname) {
+        socket.emit('join room', room.value);
+      }
     });
   </script>
 </body>
